ligolang/src/test/contracts/negative/switch_jsligo/default_in_between.jsligo
let default_in_between = (n : int) : string => {
    let output = "Hello ";
    switch (n) {
      case 1: 
        output = output + "World";
      case 2:
        output = output + "!!!";
      default:
        output = output + "###";
      case 3:
        output = output + "@@@";
      case 4:
        output = output + "^^^";
    };
    output = output + " ???";
    return output;
};
